# users_crud

./: README.md  config.ini.template  pyproject.toml  requirements.txt
src/app/: config.py  main.py
src/app/endpoints/: users.py
src/app/schemas/: config.py  user.py
src/app/services/: db.py
src/app/utils/: errors.py  stubs.py
src/migrations/: user.py
